--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+*, *::before, *::after{
+  box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  body{
+  margin: 0;
+  background: linear-gradient(to right,#092741, #b022cf );
+  }
+  .calculator-grid{
+  display: grid;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  margin-top: 2rem;
+  grid-template-columns: repeat(4,6rem);
+  grid-template-rows: minmax(7rem,auto) repeat(5, 6rem);
+  overflow-x: hidden;
+  
+  
+  
   }
-  to {
-    transform: rotate(360deg);
+  
+  
+  .calculator-grid > button{
+  cursor: pointer;
+  font-size: 2rem;
+  border:1px solid white ;
+  outline: none;
+  background-color: rgba(255, 255, 255, .75);
+  
+  
   }
-}
+  .calculator-grid > button:hover,
+  .calculator-grid > button:focus{
+  background-color: rgba(255, 255, 255, .9);
+  }
+  
+  
+  .span-two{
+  grid-column: span 2;
+  }
+  
+  
+  .output{
+  grid-column: 1 / -1;
+  background-color: rgba(0, 0, 0, .75);
+  display:flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around;
+  padding: 0.75rem;
+  word-wrap: break-word;
+  word-break: break-all;
+  
+  
+  
+  
+  
+  
+  }
+  .output .previous-operand{
+  color: rgba(255, 255, 255, .75);
+  font-size: 1.5rem;
+  
+  
+  }
+  .output .current-operand{
+  color:white;
+  font-size: 2.5rem;
+  
+  
+  
+  
+  }
+  
+  @media screen and (max-width:500px) {
+    .calculator-grid{
+      
+     
+      margin-top: 5rem;
+      grid-template-columns: repeat(4,5rem);
+      grid-template-rows: minmax(6rem,auto) repeat(5, 5.1rem);
+      overflow-x: hidden;
+      
+      
+      
+      
+      }
+      
+    
+  }
